Revert "fix sidebar cropping on zoom-out by capping center column width"
This reverts commit 0ca0af9c37cae7adc6074845abd45dbdb12b7070.

--- a/css/ai_homage.css
+++ b/css/ai_homage.css
@@ -173,7 +173,7 @@ h1 {
 
 .three-column-layout {
     display: grid;
-    grid-template-columns: 1fr min(72vw, 1400px) 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
     align-items: start;
 }
 
@@ -187,19 +187,16 @@ h1 {
 }
 
 .sidebar-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    margin-left: -12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    margin-right: 12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-image {
-    max-width: 350px;
     width: 100%;
     height: auto;
     max-height: 1200px;
@@ -1361,20 +1358,10 @@ body.no-scroll {
 
 @media (min-width: 2200px) {
     .three-column-layout {
-        display: grid;
-        grid-template-columns: 1fr min(72vw, 1400px) 1fr;
-        width: 100%;
-        padding: 0;
-    }
-
-    .sidebar {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .sidebar-image {
-        max-width: 400px;
+        justify-content: center;
+        width: 100%;
+        padding: 0 5vw;
     }
 
     .main-content-area {
