--- a/css/ai_magazine.css
+++ b/css/ai_magazine.css
@@ -173,7 +173,7 @@ h1 {
 
 .three-column-layout {
     display: grid;
-    grid-template-columns: 1fr min(72vw, 1400px) 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
     gap: 0;
 }
 
@@ -187,19 +187,16 @@ h1 {
 }
 
 .sidebar-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    margin-left: -12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    margin-right: 12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-image {
-    max-width: 350px;
     width: 100%;
     height: auto;
     max-height: 1200px;
