--- a/css/ai_scenarios_subpages.css
+++ b/css/ai_scenarios_subpages.css
@@ -242,7 +242,7 @@ body.no-scroll {
 
 .three-column-layout {
     display: grid;
-    grid-template-columns: 1fr min(72vw, 1400px) 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
     gap: 0;
 }
 
@@ -256,19 +256,16 @@ body.no-scroll {
 }
 
 .sidebar-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    margin-left: -12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    margin-right: 12vw;
+    width: calc(100% + 12vw);
 }
 
 .sidebar-image {
-    max-width: 350px;
     width: 100%;
     height: auto;
     max-height: 1200px;
@@ -745,20 +742,10 @@ body.no-scroll {
 
 @media (min-width: 2200px) {
     .three-column-layout {
-        display: grid;
-        grid-template-columns: 1fr min(72vw, 1400px) 1fr;
-        width: 100%;
-        padding: 0;
-    }
-
-    .sidebar {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .sidebar-image {
-        max-width: 400px;
+        justify-content: center;
+        width: 100%;
+        padding: 0 5vw;
     }
 
     .main-content-area {
